update with new publication

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -13,3 +13,15 @@
 "becker":
   - firstname: ["Frederic", "F", "F. B.", "Frederic Becker"]
     url: https://www.linkedin.com/in/frederic-becker-24b4b627b/?originalSubdomain=de
+
+"Saai":
+  - firstname: ["Rohith", "R", "R. S.", "Rohith Saai Pemmasani Prabakaran"]
+    url: https://www.linkedin.com/in/rohith-saai/
+
+"Ott":
+  - firstname: ["Ryan", "R", "R. O.", "Ryan Ott"]
+    url: https://www.linkedin.com/in/ryanott2000/
+
+"Miletić"
+  - firstname: ["Milan", "M", "M. M.", "Ryan Miletić"]
+    url: https://www.linkedin.com/in/miletic-milan/
