--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -14,14 +14,14 @@
   - firstname: ["Frederic", "F", "F. B.", "Frederic Becker"]
     url: https://www.linkedin.com/in/frederic-becker-24b4b627b/?originalSubdomain=de
 
-"Saai":
+"saai":
   - firstname: ["Rohith", "R", "R. S.", "Rohith Saai Pemmasani Prabakaran"]
     url: https://www.linkedin.com/in/rohith-saai/
 
-"Ott":
+"ott":
   - firstname: ["Ryan", "R", "R. O.", "Ryan Ott"]
     url: https://www.linkedin.com/in/ryanott2000/
 
-"Miletić"
+"miletić":
   - firstname: ["Milan", "M", "M. M.", "Ryan Miletić"]
     url: https://www.linkedin.com/in/miletic-milan/
