updated CV and images

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -23,5 +23,5 @@
     url: https://www.linkedin.com/in/ryanott2000/
 
 "Miletić"
-  - firstname: ["Milan", "M", "M. M.", "Ryan Miletić"]
+  - firstname: ["Milan", "M", "M. M.", "Milan Miletić"]
     url: https://www.linkedin.com/in/miletic-milan/
