fixed syntax error

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -22,6 +22,6 @@
   - firstname: ["Ryan", "R", "R. O.", "Ryan Ott"]
     url: https://www.linkedin.com/in/ryanott2000/
 
-"Miletić"
+"miletić":
   - firstname: ["Milan", "M", "M. M.", "Milan Miletić"]
     url: https://www.linkedin.com/in/miletic-milan/
