--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,10 @@ work_url: # work page URL
 x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
+custom_social: # can be any name here other than the ones already defined above
+  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
+  title: Pointer Pointer
+  url: https://pointerpointer.com/
 
 #contact_note: >
 #  You can even add a little note about which of these is the best way to reach you.
